backface-visibilty added to card class - Chrome not showing cards correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,6 +156,7 @@ a:not([href]) {
   transform-style: preserve-3d;
   -webkit-transform-style: preserve-3d;
   transition: transform 0.5s;
+  backface-visibility: hidden;
 
 }
 
